@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 14:31:03 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 14:32:54 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -200,5 +200,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>韓國作家韓江奪得諾貝爾文學獎...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 14:31:03 +0800</pubDate>
+</item><item>
+  <title>韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎</title>
+  <link>https://www.famechos.me/news/韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎.html</link>
+  <description>韓國文學躋身全球主流諾貝爾獎後再下一城。韓江獲得諾貝爾文學獎，標誌著韓國文學取得重大突破。近年來，韓國文學在國際上獲得越來越多的認可。...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 14:32:54 +0800</pubDate>
 </item></channel>
 </rss>
