@@ -1,0 +1,267 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u97d3\u570b\u6587\u5b78\u5168\u7403\u5d1b\u8d77\uff01\u8afe\u8c9d\u723e\u734e\u5f8c\u518d\u4e0b\u4e00\u57ce\uff0c\u97d3\u570b\u4f5c\u5bb6\u9023\u7e8c\u4e09\u5e74\u5165\u570d\u5e03\u514b\u734e", "description": "\u97d3\u570b\u6587\u5b78\u5168\u7403\u5d1b\u8d77\uff01\u8afe\u8c9d\u723e\u734e\u5f8c\u518d\u4e0b\u4e00\u57ce\uff0c\u97d3\u570b\u4f5c\u5bb6\u9023\u7e8c\u4e09\u5e74\u5165\u570d\u5e03\u514b\u734e", "url": "https://www.famechos.me/news/\u97d3\u570b\u6587\u5b78\u5168\u7403\u5d1b\u8d77\uff01\u8afe\u8c9d\u723e\u734e\u5f8c\u518d\u4e0b\u4e00\u57ce\uff0c\u97d3\u570b\u4f5c\u5bb6\u9023\u7e8c\u4e09\u5e74\u5165\u570d\u5e03\u514b\u734e.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T14:32:42.774909+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎.html"/>
+<meta name="description" content="韓國文學在全球崛起，諾貝爾獎後再下一城，連續三年入圍布克獎，韓國作家在國際文壇上聲名大噪。">
+
+<meta name="keywords" content="韓國文學、諾貝爾獎、布克獎、韓國作家、全球崛起、國際文壇">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎.html" />
+        <meta property="og:title" content="韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎" />
+        <meta property="og:description" content="韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎" />
+        <meta property="twitter:description" content="韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>韓江獲得諾貝爾文學獎，標誌著韓國文學取得重大突破。近年來，韓國文學在國際上獲得越來越多的認可。</p>
+<p>許多韓國作家已經通過著名的國際文學獎項在世界舞台上贏得讚譽。韓國作家一直在布克國際獎的入圍名單中占有一席之地，鞏固了他們在全球文學主流中的地位。</p>
+<p>韓江本人就是這一趨勢的先驅。2016年，她成為第一位獲得布克國際獎的韓國人，當時該獎項被稱為“布克國際獎”，她的小說《素食者》向世界展示了韓國文學的水準。2018年，她再次入圍《白色之書》，鞏固了她作為世界級作家的地位。</p>
+<p>韓江引發的勢頭得到了韓國作家在2022年至今連續三年入圍布克獎的支持。2022年，鄭寶拉的《被詛咒的兔子》入圍，2023年，千明寬的小說《鯨魚》入圍，今年，黃皙暎的《Mater 2-10》繼續了這一趨勢。</p>
+<p>分析人士將這一持續的成功歸因於韓國文學的國際成長，以及政府和私營部門對翻譯工作的有組織支持。</p>
+<p>最近，金惠順的詩集《幻痛之翼》在美國國家書評人協會獎詩歌類別中獲獎，進一步證明了這一趨勢。</p>
+<p>也有韓國作家直接用外語寫作並在國外獲得認可的例子。8月份，在韓國出生和成長的李米麗娜在美國獲得威廉•薩羅揚國際文學獎，原因是她的處女作《世紀老騙子的八條命》，該書是用英文寫的。</p>
+<h2>韓國再次接收到來自朝鮮的垃圾氣球</h2>
+<p>韓國參謀長聯席會議（JCS）表示，朝鮮再次向韓國發放20個垃圾氣球。</p>
+<h2>韓國無人機飛越平壤，朝鮮媒體稱</h2>
+<p>朝鮮媒體報導，韓國無人機飛越平壤上空。</p>
+<h2>預計於2024年底召開韓美日峰會</h2>
+<p>韓國國家安全顧問表示，韓美日峰會預計於2024年底舉行。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SaJjB3-cUNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/震驚！韓國小說家女兒獲諾貝爾文學獎，父親韓勝源：像整個世界都被顛倒了.html">震驚！韓國小說家女兒獲諾貝爾文學獎，父親韓勝源：像整個世界都被顛倒了</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任.html">杰西粉絲遭團隊人員毆打！歌手親自道歉：我感到強烈的道德責任</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲.html">韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
