@@ -236,4 +236,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/韓國文學全球崛起！諾貝爾獎後再下一城，韓國作家連續三年入圍布克獎.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T14:32:54+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
