@@ -35,3 +35,4 @@ https://en.yna.co.kr/view/AEN20241011007900315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241011003000315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241012001000315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241011012200320?section=culture/k-pop&input=rss
+https://en.yna.co.kr/view/AEN20241010010756315?section=culture/k-pop&input=rss
